--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jiro Magracia Portfolio</title>
 
-<!-- Favicon and manifest -->
-<link rel="icon" href="/favicon.ico?v=3" type="image/x-icon" />
-<link rel="shortcut icon" href="/favicon.ico?v=3" type="image/x-icon" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=3" />
-<link rel="manifest" href="/site.webmanifest?v=3" />
+  <!-- Favicon and manifest -->
+  <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=2" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=2" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=2" />
+  <link rel="manifest" href="site.webmanifest?v=2" />
 
   <!-- Other meta -->
   <meta name="theme-color" content="#ff9e00" />
@@ -359,7 +359,9 @@ document.head.appendChild(vimeoScript);
         <div class="timeline">
             <!-- Animation Mentor -->
             <div class="timeline-item">
-                <div class="timeline-icon">🎓</div>
+                <div class="timeline-icon">
+                    <img src="assets/img/am.png" class="pumuckl-avatar" alt="Pumuckl">
+                </div>
                 <div class="content">
                     <h3>Animation Mentor</h3>
                     <p class="timeline-meta">Advanced Studies in 3D Character Animation | Sep 2024 - Mar 2025</p>
@@ -371,7 +373,9 @@ document.head.appendChild(vimeoScript);
             </div>
             <!-- Filmakademie -->
             <div class="timeline-item">
-                <div class="timeline-icon">🎓</div>
+                <div class="timeline-icon">
+                    <img src="assets/img/animationsintitut.png" class="pumuckl-avatar" alt="Pumuckl">
+                </div>
                 <div class="content">
                     <h3>Filmakademie Baden-Württemberg/Animationsinstitut</h3>
                     <p class="timeline-meta">Diploma in Animation | Stuttgart, Sep 2018 - April 2024</p>
