--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <h3>Studio Soi - Pumuckl Und Das Grosse Missverständniss
         </h3>
         <p class="timeline-date">April 2025 - PRESENT | Ludwigsburg</p>
-        <p class="timeline-desc">Character Animator for movie: Pumuckl Und Das Grosse Missverständniss.</p>
+        <p class="timeline-desc">Character Animator for movie: <strong>Pumuckl Und Das Grosse Missverständniss.</strong></p>
     </div>
 </div>
             <!-- AnimationsFabrik -->
@@ -349,7 +349,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <div class="content">
             <h3>Studio Filmbilder - AnimAnimals</h3>
             <p class="timeline-date">Jul 2022 - Sep 2022 | Stuttgart</p>
-            <p class="timeline-desc">Character Animator for full episode of  AnimAnimals Episode "Bieber"</p>
+            <p class="timeline-desc">Character Animator for full episode of  <strong>AnimAnimals</strong> Episode "Bieber"</p>
         </div>
     </a>
 </div>
@@ -393,8 +393,8 @@ document.addEventListener('DOMContentLoaded', function() {
                     <p class="timeline-meta">Diploma in Animation | Stuttgart, Sep 2018 - April 2024</p>
                     <ul class="timeline-highlights">
                         <li>Specialized in 3D Character Animation under <strong>Dan Nguyen (Pixar)</strong> and <strong>Thomas Grummt (Dreamworks)</strong>.</li>
-                        <li>Directed and lead-animated student projects.</li>
-                        <li>Traditional 2D animation training.</li>
+                        <li>Directed <strong>(Puddles, Chatroom)</strong> and lead-animated <strong>(A Sparrow's Song)</strong> student projects.</li>
+                        <li>Experience in 2D animation, storyboarding and art direction</li>
                     </ul>
                 </div>
             </div>
