--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@ document.addEventListener('DOMContentLoaded', function() {
                     <h3>Animation Mentor</h3>
                     <p class="timeline-meta">Advanced Studies in 3D Character Animation | Sep 2024 - Mar 2025</p>
                     <ul class="timeline-highlights">
-                        <li>AN03: Mentored by Dreamworks Supervisor <strong>Michael Amos</strong>.</li>
-                        <li>AN04: Acting techniques with Pixar Animator <strong>Shad Bradbury</strong>.</li>
+                        <li>AN03: Advanced Mechanics with <strong>Dreamworks Supervisor Michael Amos</strong>.</li>
+                        <li>AN04: Introduction to Acting with <strong>Pixar Animator Shad Bradbury</strong>.</li>
                     </ul>
                 </div>
             </div>
@@ -450,7 +450,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     <p class="about-text" style="color: #333;">
                         Hello! My name is Marius Wilhelm Jiro Magracia and I am born and raised in Japan, Italy, and Germany! I have loved and respected Animation for as long as I can remember. I started YouTubing as a kid and gained a big following, which motivated me to further study my craft. I completed my studies in Animation at the Filmakademie Animationinstitut in Ludwigsburg, Germany, in early 2024, and Animation Mentor in 2025.
                         <br><br>
-                        I acquired knowledge in 2D Animation, Editing, Directing, Lead Animation, and CG Animation. I had the amazing opportunity to work with mentors from studios like Pixar and DreamWorks to enhance my 3D Animation skills. For me, Animation is a way of living. I love to experience, observe and curiously find more about life itself. I hope to entertain each and everyone with my animations.
+                        I acquired knowledge in 3D Animation, 2D Animation, Directing, Art Directing and Lead Animation. I had the amazing opportunity to work with mentors from studios like Pixar and DreamWorks to enhance my 3D Animation skills. For me, Animation is a way of living. I love to experience, observe and curiously find more about life itself. I hope to entertain each and everyone with my animations.
                     </p>
                 </div>
             </div>
